--- a/lang/ar.json
+++ b/lang/ar.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "الطريقة الحالية لعرض الأرقام:",
   "Customize how contacts should be displayed": "تخصيص كيفية عرض جهات الاتصال",
   "Custom name order": "ترتيب الاسم المخصص",
+  "Custom…": "مخصص…",
   "Daily affirmation": "التأكيد اليومي",
   "Dashboard": "لوحة التحكم",
+  "Data": "بيانات",
   "date": "تاريخ",
   "Date of the event": "تاريخ الحدث",
   "Date of the event:": "تاريخ الحدث:",
