--- a/lang/bn.json
+++ b/lang/bn.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "সংখ্যা প্রদর্শনের বর্তমান উপায়:",
   "Customize how contacts should be displayed": "পরিচিতিগুলি কীভাবে প্রদর্শিত হবে তা কাস্টমাইজ করুন",
   "Custom name order": "কাস্টম নামের অর্ডার",
+  "Custom…": "কাস্টম…",
   "Daily affirmation": "দৈনিক নিশ্চিতকরণ",
   "Dashboard": "ড্যাশবোর্ড",
+  "Data": "ডেটা",
   "date": "তারিখ",
   "Date of the event": "অনুষ্ঠানের তারিখ",
   "Date of the event:": "ইভেন্টের তারিখ:",
