--- a/lang/el.json
+++ b/lang/el.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Τρέχων τρόπος εμφάνισης αριθμών:",
   "Customize how contacts should be displayed": "Προσαρμόστε τον τρόπο εμφάνισης των επαφών",
   "Custom name order": "Προσαρμοσμένη σειρά ονόματος",
+  "Custom…": "Εθιμο…",
   "Daily affirmation": "Καθημερινή επιβεβαίωση",
   "Dashboard": "Πίνακας",
+  "Data": "Δεδομένα",
   "date": "ημερομηνία",
   "Date of the event": "Ημερομηνία της εκδήλωσης",
   "Date of the event:": "Ημερομηνία εκδήλωσης:",
