--- a/lang/fr.json
+++ b/lang/fr.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Mode actuel d’affichage des nombres :",
   "Customize how contacts should be displayed": "Personnaliser la façon dont les contacts doivent être affichés",
   "Custom name order": "Ordre des noms personnalisés",
+  "Custom…": "Personnalisé …",
   "Daily affirmation": "Affirmation quotidienne",
   "Dashboard": "Tableau de bord",
+  "Data": "Données",
   "date": "rencard",
   "Date of the event": "Date de l’évènement",
   "Date of the event:": "Date de l’évènement :",
