--- a/lang/hi.json
+++ b/lang/hi.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "संख्याओं को प्रदर्शित करने का वर्तमान तरीका:",
   "Customize how contacts should be displayed": "संपर्कों को प्रदर्शित करने का तरीका अनुकूलित करें",
   "Custom name order": "कस्टम नाम क्रम",
+  "Custom…": "रिवाज़…",
   "Daily affirmation": "दैनिक पुष्टि",
   "Dashboard": "डैशबोर्ड",
+  "Data": "डेटा",
   "date": "तारीख",
   "Date of the event": "घटना की तारीख",
   "Date of the event:": "आयोजन की तिथि:",
