--- a/lang/ja.json
+++ b/lang/ja.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "現在の数値の表示方法:",
   "Customize how contacts should be displayed": "連絡先の表示方法をカスタマイズする",
   "Custom name order": "カスタム名の順序",
+  "Custom…": "カスタム…",
   "Daily affirmation": "毎日のアファーメーション",
   "Dashboard": "ダッシュボード",
+  "Data": "データ",
   "date": "日付",
   "Date of the event": "イベントの日付",
   "Date of the event:": "イベントの日付:",
