--- a/lang/ml.json
+++ b/lang/ml.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "അക്കങ്ങൾ പ്രദർശിപ്പിക്കുന്നതിനുള്ള നിലവിലെ രീതി:",
   "Customize how contacts should be displayed": "കോൺടാക്റ്റുകൾ എങ്ങനെ പ്രദർശിപ്പിക്കണമെന്ന് ഇഷ്ടാനുസൃതമാക്കുക",
   "Custom name order": "ഇഷ്‌ടാനുസൃത നാമ ക്രമം",
+  "Custom…": "ഇഷ്ടാനുസൃത ...",
   "Daily affirmation": "പ്രതിദിന സ്ഥിരീകരണം",
   "Dashboard": "ഡാഷ്ബോർഡ്",
+  "Data": "അടിസ്ഥാനവിവരം",
   "date": "തീയതി",
   "Date of the event": "പരിപാടിയുടെ തീയതി",
   "Date of the event:": "ഇവന്റിന്റെ തീയതി:",
