--- a/lang/nl.json
+++ b/lang/nl.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Huidige manier om cijfers weer te geven:",
   "Customize how contacts should be displayed": "Pas aan hoe contacten moeten worden weergegeven",
   "Custom name order": "Aangepaste naamvolgorde",
+  "Custom…": "Aangepast…",
   "Daily affirmation": "Dagelijkse bevestiging",
   "Dashboard": "Dashboard",
+  "Data": "Gegevens",
   "date": "datum",
   "Date of the event": "Datum van het evenement",
   "Date of the event:": "Datum van het evenement:",
