--- a/lang/nn.json
+++ b/lang/nn.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Gjeldende måte å vise tall på:",
   "Customize how contacts should be displayed": "Tilpass hvordan kontakter skal vises",
   "Custom name order": "Egendefinert navnebestilling",
+  "Custom…": "Skikk…",
   "Daily affirmation": "Daglig bekreftelse",
   "Dashboard": "Dashbord",
+  "Data": "Data",
   "date": "Dato",
   "Date of the event": "Dato for arrangementet",
   "Date of the event:": "Dato for arrangementet:",
