--- a/lang/pa.json
+++ b/lang/pa.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "ਨੰਬਰ ਪ੍ਰਦਰਸ਼ਿਤ ਕਰਨ ਦਾ ਮੌਜੂਦਾ ਤਰੀਕਾ:",
   "Customize how contacts should be displayed": "ਵਿਉਂਤਬੱਧ ਕਰੋ ਕਿ ਸੰਪਰਕ ਕਿਵੇਂ ਪ੍ਰਦਰਸ਼ਿਤ ਕੀਤੇ ਜਾਣੇ ਚਾਹੀਦੇ ਹਨ",
   "Custom name order": "ਕਸਟਮ ਨਾਮ ਆਰਡਰ",
+  "Custom…": "ਕਸਟਮ ...",
   "Daily affirmation": "ਰੋਜ਼ਾਨਾ ਪੁਸ਼ਟੀ",
   "Dashboard": "ਡੈਸ਼ਬੋਰਡ",
+  "Data": "ਡਾਟਾ",
   "date": "ਤਾਰੀਖ਼",
   "Date of the event": "ਘਟਨਾ ਦੀ ਮਿਤੀ",
   "Date of the event:": "ਘਟਨਾ ਦੀ ਮਿਤੀ:",
