--- a/lang/pl.json
+++ b/lang/pl.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Obecny sposób wyświetlania liczb:",
   "Customize how contacts should be displayed": "Dostosuj sposób wyświetlania kontaktów",
   "Custom name order": "Niestandardowa kolejność nazw",
+  "Custom…": "Zwyczaj…",
   "Daily affirmation": "Codzienna afirmacja",
   "Dashboard": "Panel",
+  "Data": "Dane",
   "date": "data",
   "Date of the event": "Data wydarzenia",
   "Date of the event:": "Data wydarzenia:",
