--- a/lang/pt.json
+++ b/lang/pt.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Maneira atual de exibir números:",
   "Customize how contacts should be displayed": "Personalize como os contatos devem ser exibidos",
   "Custom name order": "Ordem de nome personalizado",
+  "Custom…": "Personalizado…",
   "Daily affirmation": "Afirmação diária",
   "Dashboard": "Painel de Controlo",
+  "Data": "Dados",
   "date": "data",
   "Date of the event": "Data do evento",
   "Date of the event:": "Data do evento:",
