--- a/lang/ro.json
+++ b/lang/ro.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Mod curent de afișare a numerelor:",
   "Customize how contacts should be displayed": "Personalizați modul în care ar trebui să fie afișate contactele",
   "Custom name order": "Comanda de nume personalizată",
+  "Custom…": "Obicei ...",
   "Daily affirmation": "Afirmare zilnică",
   "Dashboard": "Tablou de bord",
+  "Data": "Date",
   "date": "Data",
   "Date of the event": "Data evenimentului",
   "Date of the event:": "Data evenimentului:",
