--- a/lang/sv.json
+++ b/lang/sv.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Aktuellt sätt att visa siffror:",
   "Customize how contacts should be displayed": "Anpassa hur kontakter ska visas",
   "Custom name order": "Anpassad namnordning",
+  "Custom…": "Beställnings…",
   "Daily affirmation": "Daglig bekräftelse",
   "Dashboard": "Instrumentpanel",
+  "Data": "Data",
   "date": "datum",
   "Date of the event": "Datum för händelsen",
   "Date of the event:": "Datum för evenemanget:",
