--- a/lang/te.json
+++ b/lang/te.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "సంఖ్యలను ప్రదర్శించే ప్రస్తుత మార్గం:",
   "Customize how contacts should be displayed": "పరిచయాలు ఎలా ప్రదర్శించబడాలో అనుకూలీకరించండి",
   "Custom name order": "కస్టమ్ పేరు ఆర్డర్",
+  "Custom…": "కస్టమ్…",
   "Daily affirmation": "రోజువారీ ధృవీకరణ",
   "Dashboard": "డాష్బోర్డ్",
+  "Data": "డేటా",
   "date": "తేదీ",
   "Date of the event": "ఈవెంట్ తేదీ",
   "Date of the event:": "ఈవెంట్ తేదీ:",
