--- a/lang/tr.json
+++ b/lang/tr.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Sayıları görüntülemenin mevcut yolu:",
   "Customize how contacts should be displayed": "Kişilerin nasıl görüntüleneceğini özelleştirin",
   "Custom name order": "Özel ad sırası",
+  "Custom…": "Gelenek…",
   "Daily affirmation": "Günlük onaylama",
   "Dashboard": "Gösterge Paneli",
+  "Data": "Veri",
   "date": "tarih",
   "Date of the event": "Etkinliğin tarihi",
   "Date of the event:": "Etkinlik tarihi:",
