--- a/lang/ur.json
+++ b/lang/ur.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "نمبر ظاہر کرنے کا موجودہ طریقہ:",
   "Customize how contacts should be displayed": "اپنی مرضی کے مطابق بنائیں کہ رابطے کیسے دکھائے جائیں۔",
   "Custom name order": "حسب ضرورت نام کا آرڈر",
+  "Custom…": "رواج…",
   "Daily affirmation": "روزانہ اثبات",
   "Dashboard": "ڈیش بورڈ",
+  "Data": "ڈیٹا",
   "date": "تاریخ",
   "Date of the event": "تقریب کی تاریخ",
   "Date of the event:": "تقریب کی تاریخ:",
