--- a/lang/vi.json
+++ b/lang/vi.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Cách hiển thị số hiện tại:",
   "Customize how contacts should be displayed": "Tùy chỉnh cách hiển thị danh bạ",
   "Custom name order": "Thứ tự tên tùy chỉnh",
+  "Custom…": "Phong tục…",
   "Daily affirmation": "Khẳng định hàng ngày",
   "Dashboard": "Bảng điều khiển",
+  "Data": "Dữ liệu",
   "date": "ngày",
   "Date of the event": "Ngày diễn ra sự kiện",
   "Date of the event:": "Ngày diễn ra sự kiện:",
