--- a/lang/ca.json
+++ b/lang/ca.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Forma actual de mostrar números:",
   "Customize how contacts should be displayed": "Personalitza com s’han de mostrar els contactes",
   "Custom name order": "Comanda de nom personalitzat",
+  "Custom…": "Custom ...",
   "Daily affirmation": "Afirmació diària",
   "Dashboard": "Tauler de control",
+  "Data": "Dades",
   "date": "data",
   "Date of the event": "Data de l’esdeveniment",
   "Date of the event:": "Data de l’esdeveniment:",
