--- a/lang/da.json
+++ b/lang/da.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Nuværende måde at vise tal på:",
   "Customize how contacts should be displayed": "Tilpas, hvordan kontakter skal vises",
   "Custom name order": "Brugerdefineret navnerækkefølge",
+  "Custom…": "Skik…",
   "Daily affirmation": "Daglig bekræftelse",
   "Dashboard": "Dashboard",
+  "Data": "Data",
   "date": "dato",
   "Date of the event": "Dato for begivenheden",
   "Date of the event:": "Dato for begivenheden:",
