--- a/lang/de.json
+++ b/lang/de.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Aktuelle Art der Zahlendarstellung:",
   "Customize how contacts should be displayed": "Passen Sie an, wie Kontakte angezeigt werden sollen",
   "Custom name order": "Benutzerdefinierte Namensreihenfolge",
+  "Custom…": "Brauch…",
   "Daily affirmation": "Tägliche Bestätigung",
   "Dashboard": "Dashboard",
+  "Data": "Daten",
   "date": "Datum",
   "Date of the event": "Datum der Veranstaltung",
   "Date of the event:": "Datum der Veranstaltung:",
