--- a/lang/es.json
+++ b/lang/es.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Forma actual de mostrar números:",
   "Customize how contacts should be displayed": "Personaliza cómo se deben mostrar los contactos",
   "Custom name order": "Orden de nombre personalizado",
+  "Custom…": "Costumbre…",
   "Daily affirmation": "Afirmación diaria",
   "Dashboard": "Panel",
+  "Data": "Datos",
   "date": "fecha",
   "Date of the event": "Fecha del evento",
   "Date of the event:": "Fecha del evento:",
