--- a/lang/he.json
+++ b/lang/he.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "הדרך הנוכחית להצגת מספרים:",
   "Customize how contacts should be displayed": "התאם אישית את אופן הצגת אנשי הקשר",
   "Custom name order": "סדר שמות מותאם אישית",
+  "Custom…": "מִנְהָג…",
   "Daily affirmation": "אישור יומי",
   "Dashboard": "לוח מחוונים",
+  "Data": "נְתוּנִים",
   "date": "תַאֲרִיך",
   "Date of the event": "תאריך האירוע",
   "Date of the event:": "תאריך האירוע:",
