--- a/lang/it.json
+++ b/lang/it.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Modo attuale di visualizzare i numeri:",
   "Customize how contacts should be displayed": "Personalizza la modalità di visualizzazione dei contatti",
   "Custom name order": "Ordine dei nomi personalizzato",
+  "Custom…": "Costume…",
   "Daily affirmation": "Affermazione quotidiana",
   "Dashboard": "Dashboard",
+  "Data": "Dati",
   "date": "data",
   "Date of the event": "Data dell’evento",
   "Date of the event:": "Data dell’evento:",
