--- a/lang/ru.json
+++ b/lang/ru.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "Текущий способ отображения чисел:",
   "Customize how contacts should be displayed": "Настройте способ отображения контактов",
   "Custom name order": "Пользовательский порядок имен",
+  "Custom…": "Обычай…",
   "Daily affirmation": "Ежедневное подтверждение",
   "Dashboard": "Панель",
+  "Data": "Данные",
   "date": "дата",
   "Date of the event": "Дата мероприятия",
   "Date of the event:": "Дата мероприятия:",
