--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "当前显示数字的方式：",
   "Customize how contacts should be displayed": "自定义联系人的显示方式",
   "Custom name order": "自定义名称顺序",
+  "Custom…": "风俗…",
   "Daily affirmation": "每日肯定",
   "Dashboard": "控制面板",
+  "Data": "数据",
   "date": "日期",
   "Date of the event": "活动日期",
   "Date of the event:": "活动日期：",
