--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -367,8 +367,10 @@
   "Current way of displaying numbers:": "目前顯示數字的方式：",
   "Customize how contacts should be displayed": "自訂聯絡人的顯示方式",
   "Custom name order": "自訂名稱順序",
+  "Custom…": "風俗…",
   "Daily affirmation": "每日肯定",
   "Dashboard": "控制面板",
+  "Data": "數據",
   "date": "日期",
   "Date of the event": "活動日期",
   "Date of the event:": "活動日期：",
