--- a/lang/fr.json
+++ b/lang/fr.json
@@ -486,8 +486,8 @@
   "Favorites": "Favoris",
   "Fax": "Fax",
   "Female": "Femme",
-  "File": "Déposer",
-  "Files": "Des dossiers",
+  "File": "Fichier",
+  "Files": "Fichiers",
   "Filter": "Filtrer",
   "Filter list or create a new label": "Filtrer la liste ou créer une nouvelle étiquette",
   "Filter list or create a new tag": "Filtrer la liste ou créer une nouvelle balise",
@@ -1021,7 +1021,7 @@
   "Solve": "Résoudre",
   "Some dates have a special type that we will use in the software to calculate an age.": "Certaines dates ont un type spécial que nous utiliserons dans le logiciel pour calculer un âge.",
   "So… it works 😼": "Alors… ça marche 😼",
-  "Sport": "sport",
+  "Sport": "Sport",
   "spouse": "conjoint",
   "SSL Handshake Failed": "Échec de la prise de contact SSL",
   "Start": "Commencer",
